ContiPerf 2.0.1 Release Notes
-----------------------------


Enhancements:
-------------
- Ramp-up time to specify the time to wait before adding a new thread, e.g. @PerfTest(rampUp = 1000)
- Supporting warm-up time to start measurement and requirement checking after an initial time period is over
- Supporting wait timers to issue wait time between invocations
  - usage e.g. @PerfTest(timer = RandomTimer.class, timerParams = { 200, 400 })
  - predefined timers: None, ConstantTimer, RandomTimer, CumulatedTimer
  - custom timers by implementing the WaitTimer interface
- Method StopWatch.stop() returns the elapsed time in milliseconds
- new method LatencyCounter.percentileAboveLatency(latency)
- Javadoc for tooltip help


Bug fixes:
----------
- #3486460: CSVSummaryReportModule causes FileNotFoundException
- #3486461: HTML report displays the wrong date